--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 jupyter/data/nyc_fare.csv
 jupyter/data/nyc_taxi.zip
+jupyter/data/nyc_data.csv 
 jupyter/_firstProject/final_data/toxiccomments_train.csv
 *.csv
 *.zip
