updating gitignore to removeinclude csvs

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@ jupyter/data/nyc_fare.csv
 jupyter/data/nyc_taxi.zip
 jupyter/data/nyc_data.csv 
 jupyter/_firstProject/final_data/toxiccomments_train.csv
-*.csv
 *.zip
-*.tsv
+*.tsvs
